- modal now shows entry's name and id - modal moved to dedicated file and folder - added more styles troughout the pages - renamed most of the files and variables - some small bugfixes for the input field (entry cannot be added if the field is empty) - code cleanup

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,10 +15,12 @@ body {
 
     .content {
       max-width: 1200px;
-      min-height: 80vh;
       margin: 0 auto;
-      padding: 3rem 20px;
-      padding-bottom: 4rem; 
+      padding: 1rem 0;
+
+      p {
+        font-weight: normal;
+      }
     }
   }
 }
