--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,6 +1,8 @@
 $blue-90: #0081C9;
 $blue-80: #5BC0F8;
 $blue-70: #86E5FF;
+$blue-10: #b4cffa;
 $yellow: #FFC93C;
 $white: #ffffff;
 $black: #000000;
+$grey: #e7e7e7;
